icons gap fixed

--- a/src/components/users/home/popular-vehicles/popular-vehicle.scss
+++ b/src/components/users/home/popular-vehicles/popular-vehicle.scss
@@ -31,9 +31,11 @@
         li{
             line-height: 2rem;
             font-size: 1.1rem;
+            
 
             svg{
                 color: v.$color1;
+                margin-right: 1rem;
             }
         }
     }
